# osu_beatmap_storage

./: .gitattributes  .gitignore  README.md  export-realm.js  main.py  package-lock.json  package.json  pubspec.yaml  pyproject.toml  run.bat
lib/: app.dart  constants.dart  main.dart
lib/models/: csv_row.dart  download_job.dart  osu_realm_models.dart  osu_realm_models.realm.dart
lib/pages/: beatmap_list_page.dart  csv_import_page.dart  download_queue_page.dart  home_page.dart  replay_list_page.dart
lib/services/: danser_service.dart  download_service.dart  prefs_service.dart  realm_service.dart
lib/utils/: csv_parser.dart
lib/widgets/: beatmap_detail_sheet.dart  beatmap_set_tile.dart  csv_picker_dialog.dart  csv_row_tile.dart  danser_setup_gate.dart  difficulty_tile.dart  download_button.dart  download_job_tile.dart  mode_icon.dart  replay_tile.dart
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
test/: download copy.py  download.py  login.py  osu_map_test.py  widget_test.dart
windows/runner/: Runner.rc  main.cpp
